[gd_scene load_steps=2 format=3 uid="uid://cnven61t4r1yc"]

[ext_resource type="Script" path="res://Scripts/interactionArea.gd" id="1_ggfo0"]

[node name="InteractionArea" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ggfo0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
